--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
+# Core data science packages
 numpy>=1.24.0
 pandas>=2.0.0
-jupyter>=1.0.0
-matplotlib>=3.7.0
 scikit-learn>=1.3.0
-yfinance>=0.2.0
-statsmodels>=0.14.0
+
+# Visualization
+matplotlib>=3.7.0
 plotly>=5.18.0
+seaborn>=0.13.0
+
+# Time series models
+statsmodels>=0.14.0
+pmdarima>=2.0.0
 prophet>=1.1.4
-tensorflow==2.16.2
+
+# Deep learning
+tensorflow==2.16.2  # Stable version with Python 3.12 support
+
+# Data sources
+yfinance>=0.2.0
+
+# Development tools
+jupyter>=1.0.0
+ipykernel>=6.0.0
+notebook>=7.0.0
