--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,21 @@ scikit-learn>=1.3.0
 matplotlib>=3.7.0
 plotly>=5.18.0
 seaborn>=0.13.0
+streamlit>=1.31.0  # For web dashboard
 
 # Time series models
-statsmodels>=0.14.0
+statsmodels>=0.14.1
 pmdarima>=2.0.0
-prophet>=1.1.4
+prophet>=1.1.5
 
 # Deep learning
 tensorflow==2.16.2  # Stable version with Python 3.12 support
 
 # Data sources
-yfinance>=0.2.0
+yfinance>=0.2.35
+
+# Database
+sqlite3-api>=2.0.1
 
 # Development tools
 jupyter>=1.0.0
