--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 23 * * 1-5'  # Monday to Friday
   workflow_dispatch:  # Allow manual trigger
 
+permissions:
+  contents: write  # Add explicit permission to write to repository
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -43,10 +46,11 @@ jobs:
         
     - name: Commit and push if there are changes
       run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add data/market_data.db
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update market data and predictions [skip ci]" && git push)
+        git commit -m "Update market data and predictions [skip ci]" || echo "No changes to commit"
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
