--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -71,8 +71,11 @@ jobs:
       
       - name: Commit and push changes to local database
         run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/market_data.db
           git commit -m "Update market data and predictions" || echo "No changes to commit"
+          
+          # Use GitHub token for authentication
+          git remote set-url origin https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}
           git push
