--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -78,8 +81,4 @@ jobs:
               sys.exit(1)
           "
       
-      - name: Commit and push changes to local database
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Update market data and predictions"
-          file_pattern: "data/market_data.db"
+      # No commit step needed - we only sync to SQLite Cloud
