--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -29,34 +29,47 @@ jobs:
           pip install -r requirements.txt
       
       - name: Update market data from external sources
+        env:
+          SQLITECLOUD_URL: ${{ secrets.SQLITECLOUD_URL }}
+          USE_SQLITECLOUD: "1"
         run: |
-          # Force update from external sources
-          echo "Updating market data from external sources..."
+          # Force update from external sources directly to SQLite Cloud
+          echo "Updating market data from external sources directly to SQLite Cloud..."
           python -u scripts/update_data.py
           
-          # Show the latest date in the database
+          # Show the latest date in the SQLite Cloud database
           python -c "
-          import sqlite3
+          import os
           import pandas as pd
-          conn = sqlite3.connect('data/market_data.db')
+          os.environ['USE_SQLITECLOUD'] = '1'
+          from db_connection import get_db_connection
+          conn = get_db_connection()
           latest_date = pd.read_sql_query('SELECT MAX(date) as max_date FROM raw_market_data', conn).iloc[0]['max_date']
-          print(f'Latest data date: {latest_date}')
+          print(f'Latest data date in SQLite Cloud: {latest_date}')
           conn.close()
           "
       
       - name: Train models with updated data
+        env:
+          SQLITECLOUD_URL: ${{ secrets.SQLITECLOUD_URL }}
+          USE_SQLITECLOUD: "1"
         run: |
-          echo "Training models with updated data..."
+          echo "Training models with updated data directly in SQLite Cloud..."
           python -u scripts/train_models.py
           
-          # Show the number of predictions
+          # Show the number of predictions in SQLite Cloud
           python -c "
-          import sqlite3
+          import os
           import pandas as pd
-          conn = sqlite3.connect('data/market_data.db')
+          os.environ['USE_SQLITECLOUD'] = '1'
+          from db_connection import get_db_connection
+          conn = get_db_connection()
           for model in ['arima', 'prophet', 'dnn']:
-              count = pd.read_sql_query(f'SELECT COUNT(*) as count FROM {model}_predictions', conn).iloc[0]['count']
-              print(f'{model.upper()} predictions: {count} rows')
+              try:
+                  count = pd.read_sql_query(f'SELECT COUNT(*) as count FROM {model}_predictions', conn).iloc[0]['count']
+                  print(f'{model.upper()} predictions in SQLite Cloud: {count} rows')
+              except Exception as e:
+                  print(f'Error getting {model} prediction count: {str(e)}')
           conn.close()
           "
       
